--- a/.github/workflows/master-latest.yml
+++ b/.github/workflows/master-latest.yml
@@ -3,6 +3,8 @@ name: master-latest
 on:
   push:
     branches: [ master ]
+  schedule:
+    - cron: '0 3 * * *' # Scheduled runs every day at 3am UTC
 
 jobs:
   docker:
@@ -47,9 +49,10 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest,ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
+          pull: true # Pull new version of base image, always; avoid bit-rot
+          tags: ghcr.io/${{ github.repository }}:latest,ghcr.io/${{ github.repository }}:${{ github.sha }}
           labels: |
-            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.title=${{ github.repository }}
             org.opencontainers.image.description=${{ github.event.repository.description }}
             org.opencontainers.image.url=${{ github.event.repository.html_url }}
             org.opencontainers.image.source=${{ github.event.repository.clone_url }}
